<resources>
    <string name="app_name">My Vaccination Application</string>

    <string name="name">Name:</string>
    <string name="email">E-mail:</string>
    <string name="phone">Phone number:</string>
    <string name="type">Vaccine type:</string>
    <string name="date">Vaccine Date:</string>
    <string name="Submit">Submit</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="NoData">No Data</string>

    <string name="Reset">Delete All</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="data">Data</string>
    <string name="appearance">Appearance</string>


    <!-- Sync Preferences -->
    <string name="SaveData">Save Data</string>
    <string name="dark_theme">Dark theme</string>
    <string name="notification_text">Register to get your vaccine done!</string>

</resources>